# job_seeker

./: .gitignore  README.md  app.py  debug.py  requirements.txt
.my_venv/: pyvenv.cfg
resume_job_matcher/: README.md  pyproject.toml
resume_job_matcher/.cursor/rules/: mycustom-ules.mdc
resume_job_matcher/src/resume_job_matcher/: crew.py  main.py  preprocessing.py
resume_job_matcher/src/resume_job_matcher/config/: agents.yaml  tasks.yaml
resume_matcher_flask/: app.py  crew_processed_output_20250226_233422.json  crew_processed_output_20250227_153702.json  crew_processed_output_20250227_154239.json  crew_processed_output_20250227_162229.json  crew_processed_output_20250227_210427.json  crew_processed_output_20250227_225236.json  crew_processed_output_20250227_233437.json  crew_processed_output_20250305_141058.json  crew_processed_output_20250305_143132.json  crew_processed_output_20250305_151040.json  crew_processed_output_20250305_193648.json  crew_processed_output_20250305_223848.json  crew_processed_output_20250305_225138.json  crew_processed_output_20250305_231238.json  crew_processed_output_20250306_115141.json  crew_processed_output_20250306_120021.json  crew_processed_output_20250306_123255.json  crew_raw_output_20250226_234345.txt  crew_raw_output_20250227_093040.txt  crew_raw_output_20250227_154239.txt  crew_raw_output_20250227_162229.txt  crew_raw_output_20250227_210427.txt  crew_raw_output_20250227_225231.txt  crew_raw_output_20250227_225236.txt  crew_raw_output_20250227_233437.txt  crew_raw_output_20250305_141058.txt  crew_raw_output_20250305_143132.txt  (+8 more)
(+3 files in other folders)
